--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     align-items: center;
     padding: 0 1rem;
     background-color: #4bb550;
+    color: #FFF;
 }
 
 #cabecalhoNav > nav > ul {
