--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+body, h2, p {
     margin: 0;
     padding: 0;
 }
@@ -10,6 +10,7 @@ body {
     padding: 0 1rem;
     background-color: #4bb550;
     color: #FFF;
+    height: 65px;
 }
 
 #cabecalhoNav > nav > ul {
@@ -17,6 +18,7 @@ body {
     justify-content: space-between;
     list-style: none;
     width: 160px;
+    
 }
 
 .linksCabecalho {
@@ -28,9 +30,117 @@ body {
     text-decoration: none;
 }
 
+/* Parte Vitor */
+
+#sign{
+    width:60%;
+    height: 560px;
+    padding: 50px 0 50px 0;
+    margin: auto;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.cards{
+    width: 50%;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 2px 1px 2px 2px lightgray;
+    background-color: transparent;
+}
+
+.iconSign{
+    max-width: 80px;
+    max-height: 80px;
+}
+
+.cabecalhoCard{
+    text-align: center;
+    margin: 10px 0 30px 0;
+    opacity: 0.9;
+    color: #0CA64E;
+}
+
+#textoCabecalhoLogin{
+    margin-bottom: 60px;
+}
+
+.campoSign{
+    padding: 0 20px 10px 20px;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    opacity: 0.8;
+}
+
+.campoSign input{
+    background-color: transparent;
+    margin-top: 10px;
+    border:none;
+    border-bottom: 1px solid lightgray;
+}
+
+#inputDataNascimento{
+    color: #d6dee2;
+}
+
+.divButton{
+    align-items: center;
+    justify-items: center;
+    border-radius: 2px;
+    margin: 20px;
+    text-align: center;
+}
+
+.signButton{
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 15px;
+    border: 0.5px solid #4bb550;
+    background-color: #4bb550;
+    color: #FFF;
+    cursor: pointer;
+}
+
+.signButton:hover{
+    background-color: #93c572;
+    border: 0.5px solid #93c572;
+}
+
+#loginSettings{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 20px 43.9px 20px;
+}
+
+.loginOptions{
+    border-top: 1px solid lightgray;
+    margin: 50px 20px 10px 20px;
+    text-align: center;
+}
+
+.loginOptions p{
+    color: gray;
+    margin-top: 10px;
+}
+
+.loginOptionsIcon{
+    width: 30px;
+    height: 30px;
+    margin: 15px 10px 0 10px;
+}
+
+#redesLogin{
+    display: flex;
+   justify-content:center;
+}
+
 /* Parte da Camilla */
 
-section {
+sobre {
     padding: 10px;
     color: #504f5a;
 }
