--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,118 @@ body, h2, p {
 
 .links {
     text-decoration: none;
+    color: #FFF;
 }
+
+/* Parte Murielle */
+.sessaoContato {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+    margin: 1rem 0;
+    padding: 10px 45px;
+    background: #4bb550;
+    width: 100%;
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.sessaoContato h2 {
+    color: #f5f5f5;
+    font-size:1rem;
+    margin:2rem;
+}
+
+.formularioContato {
+    display: flex;
+    flex-direction:column;
+    width:100%
+}
+
+.labelContato {
+    color: #f5f5f5;
+    font-size:17px;
+    margin-bottom: 4px;
+}
+
+.formularioContato input {
+    padding:15px;
+    outline:nome;
+    border:0;
+    margin-bottom:20px;
+    font-size:15px;
+    transition:all 0.5s;
+}
+
+.formularioContato input:focus{
+    border-radius: 16px;
+}
+
+.formularioContato textarea{
+    padding:10px;
+    outline:none;
+    border: 0;
+    font-size:15px;
+    margin-bottom:30px;
+    transition: all 0.5s;
+}
+
+.formularioContato textarea:focus{
+    border-radius: 16px;
+}
+
+.formularioContato button{
+    padding:15px;
+    cursor:pointer;
+    font-size: 16px;
+    background: transparent;
+    border: 2px solid #f5f5f5;
+    color: #f5f5f5;
+    transition: all 1s;
+    margin-bottom: 20px;
+}
+
+.formularioContato button:hover{
+    background: #f5f5f5;
+    color: #101026;
+    border-radius: 16px;
+}
+
+.main{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    min-height:100vh;
+    background:#101026;
+    flex-direction:column;
+}
+    
+.text{
+    font-size: 45px;
+    color: #f5f5f5;
+    margin-bottom: 30px;
+}
+    
+.paragrafo{
+    color: #f5f5f5;
+    margin-bottom: 50px;
+}
+    
+.btn{
+    padding:15px 55px;
+    background: #f5f5f5;
+    text-decoration: none;
+    color: #101026;
+    font-size: 18px;
+    transition: all 0.5s;
+}
+    
+.btn:hover{
+    border-radius: 16px;
+}
+
+/* Parte Murielle */
 
 /* Parte Vitor */
 
