--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,11 @@ body, h2, p {
     align-items: center;
     justify-content:center;
     flex-direction: column;
-    margin: 1rem 0;
+    margin-top: 1rem;
     padding: 10px 45px;
     background: #4bb550;
     width: 100%;
     box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .sessaoContato h2 {
@@ -144,17 +143,17 @@ body, h2, p {
 /* Parte Vitor */
 
 #sign{
-    width:60%;
+    width: 99%;
     height: 560px;
     padding: 50px 0 50px 0;
     margin: auto;
     display: flex;
     align-items: baseline;
-    justify-content: center;
+    justify-content: space-between;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .cards{
-    width: 50%;
+    width: 30%;
     height: auto;
     margin: 10px;
     border-radius: 10px;
@@ -245,14 +244,13 @@ body, h2, p {
 }
 
 #redesLogin{
-    display: flex;
+   display: flex;
    justify-content:center;
 }
 
 /* Parte da Camilla */
 
-sobre {
-    padding: 10px;
+#sobre {
     color: #504f5a;
 }
 
@@ -263,6 +261,11 @@ sobre {
     background-color: #4bb550;
     color: white;
 
+}
+
+.conteudoSobre {
+    padding: 0 3rem;
+    box-sizing: border-box;
 }
 
 .destaqueTextoVerde {
@@ -288,12 +291,19 @@ sobre {
 
 /* Parte Sharon */
 
+.redes {
+    border-top: 1px solid #FFF;
+}
+
 .redes ul {
     display: flex; 
     justify-content: center;
+    align-items: center;
     background-color: #4bb550;
     color: #FFF;  
     margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .redes ul a {
