--- a/css/style.css
+++ b/css/style.css
@@ -28,22 +28,132 @@ body, h2, p {
 
 .links {
     text-decoration: none;
+    color: #FFF;
 }
+
+/* Parte Murielle */
+.sessaoContato {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    flex-direction: column;
+    margin-top: 1rem;
+    padding: 10px 45px;
+    background: #4bb550;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.sessaoContato h2 {
+    color: #f5f5f5;
+    font-size:1rem;
+    margin:2rem;
+}
+
+.formularioContato {
+    display: flex;
+    flex-direction:column;
+    width:100%
+}
+
+.labelContato {
+    color: #f5f5f5;
+    font-size:17px;
+    margin-bottom: 4px;
+}
+
+.formularioContato input {
+    padding:15px;
+    outline:nome;
+    border:0;
+    margin-bottom:20px;
+    font-size:15px;
+    transition:all 0.5s;
+}
+
+.formularioContato input:focus{
+    border-radius: 16px;
+}
+
+.formularioContato textarea{
+    padding:10px;
+    outline:none;
+    border: 0;
+    font-size:15px;
+    margin-bottom:30px;
+    transition: all 0.5s;
+}
+
+.formularioContato textarea:focus{
+    border-radius: 16px;
+}
+
+.formularioContato button{
+    padding:15px;
+    cursor:pointer;
+    font-size: 16px;
+    background: transparent;
+    border: 2px solid #f5f5f5;
+    color: #f5f5f5;
+    transition: all 1s;
+    margin-bottom: 20px;
+}
+
+.formularioContato button:hover{
+    background: #f5f5f5;
+    color: #101026;
+    border-radius: 16px;
+}
+
+.main{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    min-height:100vh;
+    background:#101026;
+    flex-direction:column;
+}
+    
+.text{
+    font-size: 45px;
+    color: #f5f5f5;
+    margin-bottom: 30px;
+}
+    
+.paragrafo{
+    color: #f5f5f5;
+    margin-bottom: 50px;
+}
+    
+.btn{
+    padding:15px 55px;
+    background: #f5f5f5;
+    text-decoration: none;
+    color: #101026;
+    font-size: 18px;
+    transition: all 0.5s;
+}
+    
+.btn:hover{
+    border-radius: 16px;
+}
+
+/* Parte Murielle */
 
 /* Parte Vitor */
 
 #sign{
-    width:60%;
+    width: 99%;
     height: 560px;
     padding: 50px 0 50px 0;
     margin: auto;
     display: flex;
     align-items: baseline;
-    justify-content: center;
+    justify-content: space-between;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .cards{
-    width: 50%;
+    width: 30%;
     height: auto;
     margin: 10px;
     border-radius: 10px;
@@ -80,9 +190,10 @@ body, h2, p {
     margin-top: 10px;
     border:none;
     border-bottom: 1px solid lightgray;
+    outline: none;
 }
 
-#inputDataNascimento{
+.campoSign ::placeholder , #inputDataNascimento{
     color: #d6dee2;
 }
 
@@ -134,14 +245,13 @@ body, h2, p {
 }
 
 #redesLogin{
-    display: flex;
+   display: flex;
    justify-content:center;
 }
 
 /* Parte da Camilla */
 
-sobre {
-    padding: 10px;
+#sobre {
     color: #504f5a;
 }
 
@@ -152,6 +262,11 @@ sobre {
     background-color: #4bb550;
     color: white;
 
+}
+
+.conteudoSobre {
+    padding: 0 3rem;
+    box-sizing: border-box;
 }
 
 .destaqueTextoVerde {
@@ -174,3 +289,25 @@ sobre {
   }
 
 /* Parte da Camilla */
+
+/* Parte Sharon */
+
+.redes {
+    border-top: 1px solid #FFF;
+}
+
+.redes ul {
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    background-color: #4bb550;
+    color: #FFF;  
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.redes ul a {
+    display: block;
+    padding: 10px;
+}
