--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body, h2, p {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    width: 160px;
+    width: 18.75rem;
     
 }
 
