Tela de cadastro de Metas

--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,35 @@ body, h2, p {
     -webkit-transform: rotate(-45deg);
   }
 
+  .campoInputMeta{
+    padding: 0 20px 10px 20px;
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    opacity: 0.8;
+}
+
+.campoInputMeta input{
+    background-color: transparent;
+    margin-top: 10px;
+    border:none;
+    border-bottom: 1px solid lightgray;
+    outline: none;
+}
+
+.campoInputMeta ::placeholder , #inputDataNascimento{
+    color: #d6dee2;
+}
+
+.obrigatorio {
+    color: red;
+}
+
+.sessaoFormMetas {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
 /* Parte da Camilla */
 
 /* Parte Sharon */
@@ -311,3 +340,4 @@ body, h2, p {
     display: block;
     padding: 10px;
 }
+
