--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ body, h2, p {
 #cabecalhoNav > nav > ul {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     list-style: none;
-    width: 18.75rem;
-    
+    width: 22rem;
 }
 
 .linksCabecalho {
@@ -29,6 +29,15 @@ body, h2, p {
 .links {
     text-decoration: none;
     color: #FFF;
+}
+
+.menuSelecao {
+    background-color: #4bb550;
+    border: none;
+    outline: none;
+    color: #FFF;
+    cursor: pointer;
+    width: 165px;
 }
 
 /* Parte Murielle */
@@ -136,6 +145,59 @@ body, h2, p {
     
 .btn:hover{
     border-radius: 16px;
+}
+
+.conteudoPrincipalListagem {
+    width: 70%;
+    margin: 0 auto;
+}
+
+.titulo {
+    text-align: center;
+    text-align: center;
+    margin: 10px 0 30px 0;
+    opacity: 0.9;
+    color: #0CA64E;
+}
+
+.listaDeLancamentos {
+    list-style: none;
+}
+
+.itemListaDeLancamentos{
+    display: flex;
+    background-color: #bbf2be;
+    border : 1px solid #4bb550;
+    padding: 20px;
+    margin-top: 15px;
+    border-radius: 5px;
+    justify-content: space-between;
+}
+
+.containerDeBotoes {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.botao {
+    display: flex;
+    width: 100px;
+    height: 25px;
+    border: 1px solid #4bb550;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #FFF;
+}
+
+.btnVisualizar {
+    background-color: #006400;
+}
+
+.btnEditar {
+    background-color: #006400;
 }
 
 /* Parte Murielle */
